--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 97,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,37 +22,40 @@
     "import seaborn as sns\n",
     "\n",
     "# Scikit-learn\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.metrics import classification_report, confusion_matrix, roc_auc_score, roc_curve\n",
-    "from scipy.stats import ks_2samp\n",
-    "# Models\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "# Grid Search\n",
-    "from sklearn.model_selection import GridSearchCV\n",
-    "# Cross Validation\n",
-    "from sklearn.model_selection import StratifiedKFold, cross_val_score, cross_validate\n",
-    "from sklearn.metrics import make_scorer, f1_score\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import (classification_report, confusion_matrix, f1_score,\n",
+    "                             make_scorer, roc_auc_score, roc_curve)\n",
+    "from sklearn.model_selection import (GridSearchCV, StratifiedKFold,\n",
+    "                                     cross_val_score, cross_validate,\n",
+    "                                     train_test_split)\n",
+    "from sklearn.preprocessing import StandardScaler\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "\n",
+    "# Scipy\n",
+    "from scipy.stats import ks_2samp\n",
     "\n",
     "# Imbalanced-learn\n",
     "from imblearn.over_sampling import SMOTE\n",
     "from imblearn.pipeline import Pipeline\n",
     "\n",
-    "# XGBoost et LightGBM\n",
+    "# XGBoost and LightGBM\n",
     "import xgboost as xgb\n",
     "import lightgbm as lgb\n",
     "\n",
     "# PyTorch \n",
     "import torch\n",
     "import torch.nn as nn\n",
-    "import torch.optim as optim\n",
     "import torch.nn.functional as F\n",
-    "from torch.utils.data import TensorDataset, DataLoader\n",
+    "import torch.optim as optim\n",
+    "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "# UCI ML Repo\n",
-    "from ucimlrepo import fetch_ucirepo"
+    "from ucimlrepo import fetch_ucirepo\n",
+    "\n",
+    "# Custom scripts\n",
+    "from scripts.data_preprocessing import fetch_data\n",
+    "from scripts.data_visualisation import data_visualisation"
    ]
   },
   {
@@ -108,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 149,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -125,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 147,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Dave Data\n",
-    "variables.to_csv('../data/online_shoppers_purchasing_intention_dataset.csv', index=False)\n",
-    "X.to_csv('../data/features.csv', index=False)\n",
-    "y.to_csv('../data/targets.csv', index=False)\n",
+    "# Save Data\n",
+    "# variables.to_csv('../data/online_shoppers_purchasing_intention_dataset.csv', index=False)\n",
+    "# X.to_csv('../data/features.csv', index=False)\n",
+    "# y.to_csv('../data/targets.csv', index=False)\n",
     "\n",
     "# Load Data\n",
     "variables = pd.read_csv('../data/online_shoppers_purchasing_intention_dataset.csv')\n",
@@ -144,7 +147,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## **1. Exploratory Data Analysis (EDA)***"
+    "## **1. Exploratory Data Analysis (EDA)**"
    ]
   },
   {
@@ -174,7 +177,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -444,22 +447,24 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Concatenate the feature matrix (X) and the target variable (y) into a single DataFrame\n",
-    "data = pd.concat([X, y], axis=1)\n",
+    "# Function to filter the data based on the specified percentiles for a given feature\n",
+    "def filter_percentiles(df, feature, lower_percentile=0.10, upper_percentile=0.90):\n",
+    "    lower_bound = df[feature].quantile(lower_percentile)\n",
+    "    upper_bound = df[feature].quantile(upper_percentile)\n",
+    "    # Return the filtered dataframe based on the lower and upper percentiles\n",
+    "    return df[(df[feature] >= lower_bound) & (df[feature] <= upper_bound)]\n",
     "\n",
-    "# Create a figure for the violin plots with a specified size\n",
+    "data = pd.concat([X, y], axis=1)\n",
     "plt.figure(figsize=(16, 12))\n",
     "\n",
-    "# Loop through each numeric feature to plot its distribution against the target variable 'Revenue'\n",
     "for i, feature in enumerate(numeric_features, 1):\n",
-    "    plt.subplot(4, 4, i)  # Create a subplot for each feature in a 4x4 grid\n",
-    "    sns.violinplot(x='Revenue', y=feature, data=data, split=True)  # Plot a violin plot for each feature vs 'Revenue'\n",
-    "    plt.title(f'{feature} vs Revenue')  # Set the title for each subplot\n",
+    "    plt.subplot(4, 4, i) \n",
+    "    # Filter the data based on the 10th and 90th percentiles of the feature\n",
+    "    data_filtered = filter_percentiles(data, feature)\n",
+    "    sns.violinplot(x='Revenue', y=feature, data=data_filtered, split=True) \n",
+    "    plt.title(f'{feature} vs Revenue (80% values)')  \n",
     "\n",
-    "# Adjust layout to prevent overlap\n",
     "plt.tight_layout()\n",
-    "\n",
-    "# Display the figure\n",
     "plt.show()"
    ]
   },
@@ -506,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -523,7 +528,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -567,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 118,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -587,7 +592,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 119,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -653,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -671,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 122,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -689,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 124,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -729,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 125,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -826,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -836,7 +841,7 @@
     "    'Decision Tree': y_pred_dt,        # Predictions from Decision Tree\n",
     "    'Random Forest': y_pred_rf,        # Predictions from Random Forest\n",
     "    'XGBoost': y_pred_xgb,             # Predictions from XGBoost\n",
-    "    'Neural Network (PyTorch)': all_preds  # Predictions from the PyTorch Neural Network\n",
+    "    'NN (PyTorch)': all_preds  # Predictions from the PyTorch Neural Network\n",
     "}\n"
    ]
   },
@@ -883,6 +888,30 @@
     "# Create a DataFrame to display the results\n",
     "df_results = pd.DataFrame(results)\n",
     "df_results  # Display the results DataFrame"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, axes = plt.subplots(2, 3, figsize=(18, 12))\n",
+    "\n",
+    "metrics = ['Precision False', 'Recall False', 'F1-Score False', 'Precision True', 'Recall True', 'F1-Score True']\n",
+    "titles = ['Precision False', 'Recall False', 'F1-Score False', 'Precision True', 'Recall True', 'F1-Score True']\n",
+    "\n",
+    "for i, metric in enumerate(metrics):\n",
+    "    row, col = divmod(i, 3)  \n",
+    "    sns.barplot(x='Model', y=metric, data=df_results, ax=axes[row, col], palette='viridis', hue='Model')\n",
+    "    axes[row, col].tick_params(axis='x', rotation=30)\n",
+    "    axes[row, col].set_title(titles[i])\n",
+    "    axes[row, col].set_ylabel('Score')\n",
+    "    axes[row, col].set_xlabel('Model')\n",
+    "    axes[row, col].set_ylim((0.8, 1))\n",
+    "\n",
+    "plt.tight_layout()\n",
+    "plt.show()"
    ]
   },
   {
@@ -1297,11 +1326,12 @@
     "plt.figure(figsize=(16, 12))\n",
     "for i, feature in enumerate(numeric_features, 1):\n",
     "    \n",
-    "    # Compute the min and max values for the x-axis with a margin of 1.5 * std\n",
-    "    min_val = min(comparison_stats.loc[feature, 'mean_misclassified'] - 1.5 * comparison_stats.loc[feature, 'std_misclassified'],\n",
-    "                  comparison_stats.loc[feature, 'mean_correctly_classified'] - 1.5 * comparison_stats.loc[feature, 'std_correctly_classified'])\n",
-    "    max_val = max(comparison_stats.loc[feature, 'mean_misclassified'] + 1.5 * comparison_stats.loc[feature, 'std_misclassified'],\n",
-    "                  comparison_stats.loc[feature, 'mean_correctly_classified'] + 1.5 * comparison_stats.loc[feature, 'std_correctly_classified'])\n",
+    "    # Compute the min and max values for the x-axis with a margin of 1.96 * std\n",
+    "    # (95% confidence interval for a normal distribution)\n",
+    "    min_val = min(comparison_stats.loc[feature, 'mean_misclassified'] - 1.96 * comparison_stats.loc[feature, 'std_misclassified'],\n",
+    "                  comparison_stats.loc[feature, 'mean_correctly_classified'] - 1.96 * comparison_stats.loc[feature, 'std_correctly_classified'])\n",
+    "    max_val = max(comparison_stats.loc[feature, 'mean_misclassified'] + 1.96 * comparison_stats.loc[feature, 'std_misclassified'],\n",
+    "                  comparison_stats.loc[feature, 'mean_correctly_classified'] + 1.96 * comparison_stats.loc[feature, 'std_correctly_classified'])\n",
     "    \n",
     "    # Create a subplot for each feature\n",
     "    plt.subplot(4, 4, i)\n",
