fix: notebook issues

--- a/notebooks/classification.ipynb
+++ b/notebooks/classification.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -51,11 +51,7 @@
     "from torch.utils.data import DataLoader, TensorDataset\n",
     "\n",
     "# UCI ML Repo\n",
-    "from ucimlrepo import fetch_ucirepo\n",
-    "\n",
-    "# Custom scripts\n",
-    "from scripts.data_preprocessing import fetch_data\n",
-    "from scripts.data_visualisation import data_visualisation"
+    "from ucimlrepo import fetch_ucirepo"
    ]
   },
   {
@@ -111,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -138,9 +134,9 @@
     "# y.to_csv('../data/targets.csv', index=False)\n",
     "\n",
     "# Load Data\n",
-    "variables = pd.read_csv('../data/online_shoppers_purchasing_intention_dataset.csv')\n",
-    "X = pd.read_csv('../data/features.csv')\n",
-    "y = pd.read_csv('../data/targets.csv')"
+    "# variables = pd.read_csv('../data/online_shoppers_purchasing_intention_dataset.csv')\n",
+    "# X = pd.read_csv('../data/features.csv')\n",
+    "# y = pd.read_csv('../data/targets.csv')"
    ]
   },
   {
@@ -177,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -236,7 +232,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We observe that only **14,5%** of users bought."
+    "We observe that only **15,5%** of users bought."
    ]
   },
   {
@@ -511,7 +507,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -528,7 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -554,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -572,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -592,7 +588,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -640,7 +636,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -658,7 +654,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +672,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -694,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +730,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -831,7 +827,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 172,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -902,7 +898,7 @@
     "titles = ['Precision False', 'Recall False', 'F1-Score False', 'Precision True', 'Recall True', 'F1-Score True']\n",
     "\n",
     "for i, metric in enumerate(metrics):\n",
-    "    row, col = divmod(i, 3)  \n",
+    "    row, col = divmod(i, 3)\n",
     "    sns.barplot(x='Model', y=metric, data=df_results, ax=axes[row, col], palette='viridis', hue='Model')\n",
     "    axes[row, col].tick_params(axis='x', rotation=30)\n",
     "    axes[row, col].set_title(titles[i])\n",
@@ -1366,7 +1362,7 @@
     "\n",
     "for feature in numeric_features:\n",
     "    # Perform the Kolmogorov-Smirnov test\n",
-    "    stat, p_value = ks_2samp(correctly_classified[feature], misclassified[feature]) \n",
+    "    stat, p_value = ks_2samp(correctly_classified[feature], misclassified[feature])\n",
     "    ks_data.append([f'{stat:.3f}', f'{p_value:.3f}'])\n",
     "pd.DataFrame(ks_data, columns=['Statistique KS', 'p-value'], index=numeric_features)"
    ]
